--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <nav>
             <a href="#features">Features</a>
             <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.1/amar-metro.apk">Download APP</a>
         </nav>
     </header>
     <main>
