--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </section>
         <section>
             <h2>Download Amar Metro</h2>
-            <p>Available now on the Google Play Store. <a href="#">Download Now!</a></p>
+            <p>Will be Available on the Google Play Store. <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.1/amar-metro.apk">Download Now!</a></p>
         </section>
     </main>
     <footer>
