--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <nav>
             <a href="#features">Features</a>
             <a href="privacy-policy.html">Privacy Policy</a>
-            <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.1/amar-metro.apk">Download APP</a>
+            <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.7/app-release.apk">Download APP</a>
         </nav>
     </header>
     <main>
@@ -134,7 +134,7 @@
         </section>
         <section>
             <h2>Download Amar Metro</h2>
-            <p>Will be Available on the Google Play Store. <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.1/amar-metro.apk">Download Now!</a></p>
+            <p>Will be Available on the Google Play Store. <a href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v1.7/app-release.apk">Download Now!</a></p>
         </section>
     </main>
     <footer>
