--- a/index.html
+++ b/index.html
@@ -4,6 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amar Metro - Smarter Metro Travel</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Amar Metro - Smarter Metro Travel</title>
+
+    <!-- General Meta Tags -->
+    <meta name="description" content="Amar Metro is your smarter metro travel companion. Simplify your daily commute with features like NFC support, fare calculation, and offline functionality. Download now and travel smarter!">
+    <meta name="keywords" content="Amar Metro, Metro Travel App, NFC Metro, Fare Calculator, Metro Card Management, Metro Map, Journey History, Offline Metro App">
+    <meta name="author" content="Shakil Ahmed">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Amar Metro - Smarter Metro Travel">
+    <meta property="og:description" content="Simplify your metro travel with Amar Metro. NFC support, fare calculator, and offline functionality make your commute smarter and hassle-free.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://github.com/shakilofficial0/Amar-Metro/releases/download/v2.0.1/app-release.apk">
+    <meta property="og:image" content="https://github.com/shakilofficial0/Amar-Metro/raw/main/assets/banner.png">
+    <meta property="og:site_name" content="Amar Metro">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Amar Metro - Smarter Metro Travel">
+    <meta name="twitter:description" content="Simplify your metro travel with Amar Metro. NFC support, fare calculator, and offline functionality make your commute smarter and hassle-free.">
+    <meta name="twitter:image" content="https://github.com/shakilofficial0/Amar-Metro/raw/main/assets/banner.png">
+    <meta name="twitter:site" content="@shakilofficial0">
+
+    <!-- Favicons -->
+    <link rel="icon" href="https://github.com/shakilofficial0/Amar-Metro/raw/main/assets/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://github.com/shakilofficial0/Amar-Metro/raw/main/assets/apple-touch-icon.png">
+
+    <!-- Manifest for Progressive Web Apps -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#007bff">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://github.com/shakilofficial0/Amar-Metro/releases/download/v2.0.1/app-release.apk">
+
+    <!-- Extra Tags for Mobile Performance -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Amar Metro">
+
+    <!-- Schema.org Markup for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Amar Metro",
+      "description": "Smarter Metro Travel Companion with NFC, Fare Calculator, and Offline Features.",
+      "applicationCategory": "TravelApplication",
+      "operatingSystem": "Android",
+      "url": "https://github.com/shakilofficial0/Amar-Metro/releases/download/v2.0.1/app-release.apk",
+      "image": "https://github.com/shakilofficial0/Amar-Metro/raw/main/assets/banner.png",
+      "author": {
+        "@type": "Person",
+        "name": "Shakil Ahmed"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0.00",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
     <style>
         body {
             font-family: Arial, sans-serif;
