--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -96,7 +96,7 @@
         <section>
             <h2>Contact Us</h2>
             <p>If you have any questions or concerns about this privacy policy, please contact us at:</p>
-            <p><strong>Email:</strong> support@amar-metro.com</p>
+            <p><strong>Email:</strong> amar-metro@codebumble.net</p>
         </section>
     </main>
     <footer>
